--- a/frontend-web/index.css
+++ b/frontend-web/index.css
@@ -11,3 +11,12 @@ html, body {
 	height: 100vh;
 	width: 100%;
 }
+
+#map-overlay {
+	position: absolute;
+	left: 1em;
+	top: 1em;
+	min-width: 20%;
+	min-height: 15em;
+	padding: 1em;
+}
