--- a/frontend-web/index.css
+++ b/frontend-web/index.css
@@ -12,12 +12,27 @@ html, body {
 	width: 100%;
 }
 
-#map-overlay {
+#map-overlays {
 	position: absolute;
 	left: 1em;
 	top: 1em;
-	min-width: 20%;
+	width: 20%;
+}
+
+#search-bar {
+	width: 100%;
+	margin-bottom: 1em;
+	min-height: 0;
+}
+
+#search-bar .mdl-card__supporting-text {
+	padding-top: 0;
+	padding-bottom: 0; 
+}
+
+#map-overlay {
 	min-height: 15em;
+	width: 100%;
 	padding: 1em;
 }
 
