--- a/django_project_peacefinder/mapoutput/templates/mapoutput/index.html
+++ b/django_project_peacefinder/mapoutput/templates/mapoutput/index.html
@@ -5,11 +5,11 @@
 <head>
  <title>Peace Finder</title>
  <link rel="stylesheet" type="text/css" href="{% static 'mapoutput/style.css' %}" />
+ <script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
  <script type="text/javascript" src="{% static 'mapoutput/client.js' %}"></script>
 </head>
 
 <body>
-<p>The peace finder arrived!</p>
-<p id="more"></p>
+ <div id="map"></div>
 </body>
 </html>
